# Capstone_Projects

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CODEX_IMPLEMENTATION_UPDATE.md  DATA.md  Dockerfile.api  Dockerfile.app  LICENSE  Makefile  ORIUS_REPRODUCIBILITY.md  PRODUCTION_GUIDE.md  README.md  audit.py  evaluate_dc3s.py  mypy.ini  orius_battery_409page_figures_upgraded_main.aux  orius_battery_409page_figures_upgraded_main.blg  orius_battery_409page_figures_upgraded_main.fdb_latexmk  orius_battery_409page_figures_upgraded_main.fls  orius_battery_409page_figures_upgraded_main.lof  orius_battery_409page_figures_upgraded_main.lot  orius_battery_409page_figures_upgraded_main.out  orius_battery_409page_figures_upgraded_main.tex  orius_battery_409page_figures_upgraded_main.toc  orius_book.tex  preamble.tex  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.txt  restructure_thesis.py  ruff.toml  thesis_final_main.aux  thesis_final_main.lof  thesis_final_main.lot  thesis_final_main.out  thesis_final_main.toc
appendices/: app_a_notation.aux  app_a_notation.tex  app_aa_release_manifest_and_artifact_traceability.aux  app_aa_release_manifest_and_artifact_traceability.tex  app_ab_hil_fault_response_log.aux  app_ab_hil_fault_response_log.tex  app_ac_integrated_theorem_surface_register.aux  app_ac_integrated_theorem_surface_register.tex  app_ad_dataset_cards.tex  app_ae_reproducibility_appendix.tex  app_b_assumptions.aux  app_b_assumptions.tex  app_c_all_theorems.tex  app_c_flagship_proofs.tex  app_c_full_proofs.aux  app_c_full_proofs.tex  (+48 more)
(+2145 files in other folders)
