[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridpulse"
version = "0.1.0"
description = "GridPulse: Autonomous Energy Intelligence & Optimization Platform"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Pratik Niroula"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
